--- a/gw/components/vera/CMakeLists.txt
+++ b/gw/components/vera/CMakeLists.txt
@@ -1,5 +1,5 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
-    TOP_MODULE top 
+    TOP_MODULE vera_top 
     COMPONENT_NAME vera 
 )
