--- a/gw/projects/vera_standalone/Bender.yml
+++ b/gw/projects/vera_standalone/Bender.yml
@@ -10,8 +10,10 @@ dependencies:
   vera: { path: "../../components/vera" }
   
 sources:
+  - target: constraints
+    files:
+      - constrs/vera_test_constraints.xdc
   - target: verilator
     files:
-      - sim/sprite_ram.v
       - sim/sim_main.cpp
       - lint.vlt
