--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -33,4 +33,5 @@ endfunction()
 add_subdirectory(hello_world)
 add_subdirectory(picolibc_test)
 add_subdirectory(ddr_test)
+add_subdirectory(vera_test)
 
