--- a/gw/projects/vera_integrated/Bender.yml
+++ b/gw/projects/vera_integrated/Bender.yml
@@ -19,6 +19,16 @@ sources:
   - target: constraints
     files:
       - constrs/Arty-A7-35-Master.xdc
+  - target: arty-a7-35
+    defines:
+      VRAM_SIZE_BYTES: (64*1024)
+    files:
+      - rtl/vera_test_soc.sv
+  - target: arty-a7-100
+    defines:
+      VRAM_SIZE_BYTES: (128*1024)
+    files:
+      - rtl/vera_test_soc.sv
   - target: verilator
     files:
       - sim/sim_main.cpp
@@ -41,4 +51,3 @@ sources:
       - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/spramx32.sv      
       - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/wb_spramx32.sv
       - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/wb_timer.sv
-      - rtl/vera_test_soc.sv
