--- a/.gitmodules
+++ b/.gitmodules
@@ -28,6 +28,6 @@
 [submodule "sub/litex"]
 	path = sub/litex
 	url = https://github.com/epsilon537/litex
-[submodule "sub/vera-module"]
-	path = sub/vera-module
-	url = https://github.com/epsilon537/vera-module
+[submodule "sub/vera_wishbone"]
+	path = sub/vera_wishbone
+	url = https://github.com/epsilon537/vera_wishbone
