--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -191,3 +191,4 @@ if(CMAKE_BUILD_TYPE STREQUAL "sim")
     add_subdirectory(vera_standalone)
 endif()
 add_subdirectory(vera_integrated)
+add_subdirectory(sdspi_test)
