--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -34,4 +34,5 @@ add_subdirectory(hello_world)
 add_subdirectory(picolibc_test)
 add_subdirectory(ddr_test)
 add_subdirectory(vera_test)
+add_subdirectory(sdspi_test)
 
