--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -1,2 +1,2 @@
-#Nothing to see here right not. Moving on to bootstrap, the only SW component currently.
 add_subdirectory(bootstrap)
+add_subdirectory(fatfs)
