--- a/gw/projects/sdspi_test/Bender.yml
+++ b/gw/projects/sdspi_test/Bender.yml
@@ -12,8 +12,8 @@ dependencies:
   ibex_wb_common: { path: "../../components/ibex_wb_common" }
   ibex_wb_core: { path: "../../components/ibex_wb_core" }
   riscv-dbg: { path: "../../components/riscv-dbg" }
-  litedram: { path: "../../components/litedram" }
-  vera: { path: "../../components/vera" }
+  #litedram: { path: "../../components/litedram" }
+  #vera: { path: "../../components/vera" }
   sdspi: { path: "../../components/sdspi" }
 
 sources:
@@ -44,8 +44,6 @@ sources:
     defines:
       NO_MODPORT_EXPRESSIONS: ~
       DEBUG_MODULE_ACTIVE: ~
-      DRAM: ~
-      VERA: ~
       SDSPI: ~
     #spram and timer should be separate components, but since I won't use them
     #as Boxlambda components, I'm leaving them here in the hello world example
