--- a/gw/projects/sdspi_test/CMakeLists.txt
+++ b/gw/projects/sdspi_test/CMakeLists.txt
@@ -1,15 +1,17 @@
 #FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
     set(top_module sdspi_test_soc)
+    set(sw_project sdspi_test_hw)
 else()
     set(top_module sim_main)
+    set(sw_project sdspi_test_ver)
 endif()
 
 #gw_project_rules() function is defined in the parent CMakeLists.txt.
 gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME sdspi_test
-    MEM_FILE_TARGET sdspi_test
+    MEM_FILE_TARGET ${sw_project}
     MEM_FILE_OUT spram.mem
     VERILATOR_CPP_FLAGS 
         "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
@@ -17,9 +19,9 @@ gw_project_rules(
         -lncurses
 )
 
-#Add testcase
+#Add testcase. This one's a script, not just the Verilator Vmodel executable.
 add_test(NAME sdspi_test_test
-    COMMAND ./Vmodel
+    COMMAND ./Vmodel -s ${CMAKE_CURRENT_LIST_DIR}/test/sdcard.img
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
 
