--- a/sw/projects/sdspi_test_ver/CMakeLists.txt
+++ b/sw/projects/sdspi_test_ver/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(sdspi_test
+add_executable(sdspi_test_ver
 	EXCLUDE_FROM_ALL
 	sdspi_test.c
 	sdspi_hal.c
@@ -6,10 +6,10 @@ add_executable(sdspi_test
 	../../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/libs/soc/utils.c
 )
 
-target_compile_definitions(sdspi_test
+target_compile_definitions(sdspi_test_ver
 	PRIVATE
 		-DCONFIG_CPU_NOP="nop"
 )
 
 #Function defined in parent CMakeLists.txt file:
-link_internal_create_mem_file(sdspi_test)
+link_internal_create_mem_file(sdspi_test_ver)
