sdspi and fatfs test up and running.

--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -194,3 +194,4 @@ if(CMAKE_BUILD_TYPE STREQUAL "sim")
 endif()
 add_subdirectory(vera_integrated)
 add_subdirectory(sdspi_test)
+add_subdirectory(fatfs_test)
