--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -34,8 +34,5 @@ add_subdirectory(hello_world)
 add_subdirectory(picolibc_test)
 add_subdirectory(ddr_test)
 add_subdirectory(vera_test)
-if(CMAKE_BUILD_TYPE STREQUAL "sim")
-    add_subdirectory(sdspi_test_ver)
-else()
-add_subdirectory(sdspi_test_hw)
-endif()
+add_subdirectory(sdspi_test)
+add_subdirectory(fatfs_test)
