--- a/sw/components/bootstrap/CMakeLists.txt
+++ b/sw/components/bootstrap/CMakeLists.txt
@@ -15,3 +15,8 @@ target_include_directories(bootstrap
         ../../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/libs/soc
         ${CMAKE_CURRENT_LIST_DIR}
 )
+
+target_compile_options(bootstrap
+	PRIVATE
+		-O2
+)
