--- a/sw/components/fatfs/CMakeLists.txt
+++ b/sw/components/fatfs/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(fatfs)
 
+#FatFs source plus two source files from sdspi tying FatFs to the SDSPI controller
+#or in other words, implementing the 'Media Access Interface' for FatFs.
 target_sources(fatfs
     PRIVATE
     ../../../sub/fatfs/source/ff.c
@@ -10,15 +12,20 @@ target_sources(fatfs
 
 )
 
+target_compile_definitions(fatfs
+	PRIVATE
+		-DSDSPI_CPU_ENDIANNESS=LITTLE_ENDIAN
+)
+
+#We have to turn on optimizations or we won't fit in the on-chip RAM link map.
 target_compile_options(fatfs
 	PRIVATE
 		-O2 -g
 )
 
-#Paths to include files users of fatfs are expected to use.
 target_include_directories(fatfs
     PUBLIC
-    ${PROJECT_SOURCE_DIR}/sub/fatfs/source
+    ${PROJECT_SOURCE_DIR}/sub/fatfs/source #Paths to include files users of fatfs are expected to use.
     PRIVATE
     ${PROJECT_SOURCE_DIR}/sub/sdspi/sw/
 )
