--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,23 +8,36 @@ nav:
     - Terms and Abbreviations: terms-and-abbreviations.md
     - Goals and Requirement Analysis: goals-and-requirement-analysis.md
     - Architecture: architecture.md
-    - Components:
-        - Wishbone Interconnect: components_wb_interconnect.md
-        - RISCV Ibex Processor: components_ibex.md
-        - RISCV-DBG Debug Core: components_riscv_dbg.md
-        - LiteDRAM Memory Controller: components_litedram.md
-        - VERA (Wishbone) Graphics: components_vera.md
-        - Storage: components_storage.md
-        - Sound: components_sound.md
-        - DMA: components_dma.md
-        - Serial Port: components_serial.md
-        - I2C: components_i2c.md
-        - Miscellaneous: components_misc.md
     - Clocks and Reset: clocks_and_reset.md
     - Interrupts: interrupts.md
     - Estimated FPGA Utilization: estimated-fpga-utilization.md
     - Git Workflow: git-workflow.md
     - The Build System and Directory Layout: build-system.md
     - The Test Bench: test-bench.md
-    - Software: software.md
-    - Installation and Test Builds: installation-and-test-builds.md
+    - Gateware Components:
+        - Wishbone Interconnect: components_wb_interconnect.md
+        - RISCV Ibex Processor: components_ibex.md
+        - RISCV-DBG Debug Core: components_riscv_dbg.md
+        - LiteDRAM Memory Controller: components_litedram.md
+        - VERA (Wishbone) Graphics: components_vera.md
+        - SDSPI SD Card Controller: components_sdspi.md
+        - Sound: components_sound.md
+        - DMA: components_dma.md
+        - Keyboard and Mouse: components_keyboard_and_mouse.md
+        - Serial Port: components_serial.md
+        - I2C: components_i2c.md
+        - Miscellaneous: components_misc.md
+    - Software Components:
+        - LiteDRAM Initialization: sw_comp_litedram_initialization.md
+        - PicoLibc: sw_comp_picolibc.md
+        - FatFs: sw_comp_fat_fs.md
+    - Installation and Test Builds:
+        - Prerequisites: prerequisites.md
+        - Installation: installation.md
+        - Test Builds: 
+            - Hello World: test-build-hello-world.md
+            - Hello Debugger: test-build-hello-dbg.md
+            - PicoLibc Test: test-build-picolibc.md
+            - DDR Test: test-build-ddr.md
+            - VERA Test: test-build-vera.md
+            - SDSPI and FatFS Test: test-build-sdspi-and-fatfs.md
