--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -195,3 +195,5 @@ endif()
 add_subdirectory(vera_integrated)
 add_subdirectory(sdspi_test)
 add_subdirectory(fatfs_test)
+add_subdirectory(ym2149_test)
+add_subdirectory(audio_dac_test)
