--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(ddr_test)
 add_subdirectory(vera_test)
 add_subdirectory(sdspi_test)
 add_subdirectory(fatfs_test)
+add_subdirectory(ym2149_test)
