--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -197,3 +197,4 @@ add_subdirectory(sdspi_test)
 add_subdirectory(fatfs_test)
 add_subdirectory(ym2149_test)
 add_subdirectory(audio_dac_test)
+add_subdirectory(ym2149_dac_test)
