--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
   
-project(BoxLambda VERSION 0.1.0 LANGUAGES C ASM)
+project(BoxLambda VERSION 0.1.0 LANGUAGES C CXX ASM)
 
 #Build systems like Ninja can handle multiple configurations in one build tree.
 #We currently don't support that.
