--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -195,6 +195,8 @@ endif()
 add_subdirectory(vera_integrated)
 add_subdirectory(sdspi_test)
 add_subdirectory(fatfs_test)
-add_subdirectory(ym2149_test)
 add_subdirectory(audio_dac_test)
 add_subdirectory(ym2149_dac_test)
+if ((CMAKE_BUILD_TYPE STREQUAL "sim") AND (BL_TARGET_FPGA STREQUAL "arty-a7-100"))
+add_subdirectory(stsound_test)
+endif()
