--- a/sw/projects/ddr_test/CMakeLists.txt
+++ b/sw/projects/ddr_test/CMakeLists.txt
@@ -43,4 +43,4 @@ else() #fpga:
 endif()
 
 #Function defined in parent CMakeLists.txt file:
-link_internal_create_mem_file(ddr_test)
+link_internal_create_mem_file(ddr_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_internal_mem_64K.ld)
