--- a/sw/projects/picolibc_test/CMakeLists.txt
+++ b/sw/projects/picolibc_test/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(picolibc_test
 )
 
 #Function defined in parent CMakeLists.txt file:
-link_internal_create_mem_file(picolibc_test)
+link_internal_create_mem_file(picolibc_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_internal_mem_64K.ld)
