--- a/sw/projects/vera_test/CMakeLists.txt
+++ b/sw/projects/vera_test/CMakeLists.txt
@@ -46,4 +46,4 @@ else() #fpga:
 endif()
 
 #Function defined in parent CMakeLists.txt file:
-link_internal_create_mem_file(vera_test)
+link_internal_create_mem_file(vera_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_internal_mem_64K.ld)
