--- a/sw/projects/ym2149_test/CMakeLists.txt
+++ b/sw/projects/ym2149_test/CMakeLists.txt
@@ -11,4 +11,4 @@ target_compile_definitions(ym2149_test
 )
 
 #Function defined in parent CMakeLists.txt file:
-link_internal_create_mem_file(ym2149_test)
+link_internal_create_mem_file(ym2149_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_internal_mem_64K.ld)
