--- a/sw/projects/ym2149_test/CMakeLists.txt
+++ b/sw/projects/ym2149_test/CMakeLists.txt
@@ -10,5 +10,10 @@ target_compile_definitions(ym2149_test
 		-DCONFIG_CPU_NOP="nop"
 )
 
+target_compile_options(ym2149_test
+	PRIVATE
+		-O2
+)
+
 #Function defined in parent CMakeLists.txt file:
 link_internal_create_mem_file(ym2149_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_internal_mem_64K.ld)
